--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "publish-packages",
-  "version": "0.1.0",
-  "private": true,
+  "name": "pape-ui",
+  "version": "0.1.1",
+  "author": "L.J.Zhang",
+  "private": false,
+  "license": "MIT",
+  "description": "A Component Library for Vue.js.",
+  "main": "lib/pape-ui.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "lib": "vue-cli-service build --target lib --name pape-ui --dest lib packages/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
