--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pape-ui",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "L.J.Zhang",
   "private": false,
   "license": "MIT",
@@ -11,6 +11,10 @@
     "build": "vue-cli-service build",
     "lib": "vue-cli-service build --target lib --name pape-ui --dest lib packages/index.js",
     "lint": "vue-cli-service lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:TheSixth/pape-ui.git"
   },
   "dependencies": {
     "core-js": "^3.3.2",
